Update gitignore, tcl files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+tcl
+
 ########################################################
 # flask
 # from: https://raw.githubusercontent.com/pallets/flask/master/.gitignore
