--- a/MinervaEnv/requirements.txt
+++ b/MinervaEnv/requirements.txt
@@ -8,6 +8,7 @@ MarkupSafe==1.0
 packaging==16.8
 pyasn1==0.2.3
 pyasn1-modules==0.0.8
+pymongo==3.4.0
 pyparsing==2.2.0
 requests==2.13.0
 rsa==3.4.2
