--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,26 @@
 appdirs==1.4.3
+astroid==1.5.3
 beautifulsoup4==4.6.0
 bs4==0.0.1
 click==6.7
 Flask==0.12
+Flask-Login==0.4.0
 httplib2==0.10.3
+isort==4.2.15
 itsdangerous==0.24
 Jinja2==2.9.5
+lazy-object-proxy==1.3.1
 MarkupSafe==1.0
+mccabe==0.6.1
 packaging==16.8
+pep8==1.7.0
 pyasn1==0.2.3
 pyasn1-modules==0.0.8
+pylint==1.7.2
 pymongo==3.4.0
 pyparsing==2.2.0
 requests==2.13.0
 rsa==3.4.2
 six==1.10.0
 Werkzeug==0.12.1
+wrapt==1.10.11
