--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 appdirs==1.4.3
 astroid==1.5.3
+bcrypt==3.1.3
 beautifulsoup4==4.6.0
 bs4==0.0.1
+cffi==1.11.0
 click==6.7
 Flask==0.12
 Flask-Login==0.4.0
@@ -17,6 +19,7 @@ packaging==16.8
 pep8==1.7.0
 pyasn1==0.2.3
 pyasn1-modules==0.0.8
+pycparser==2.18
 pylint==1.7.2
 pymongo==3.4.0
 pyparsing==2.2.0
