--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,13 @@
 
 tcl
 .vscode/
+*.swp
+
+######################################################
+#Upload Files
+*.pdf
+*.docx
+*.jpeg
 
 #######################################################
 # PosGraduacao
