Mudanças no .gitignore
No modelo anterior havia a possibilidade de ignorar arquivos que não deveriam ser ignoradas, isso devido a uso indevido de wildcards

--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,9 @@ tcl
 
 ######################################################
 #Upload Files
-*.pdf
-*.docx
-*.jpeg
+*static/upload_files/*/*/*.pdf
+*static/upload_files/*/*/*.docx
+*static/upload_files/*.jpeg
 
 #######################################################
 # PosGraduacao
