--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,8 @@
-web:
-   build: .
-   command: python -u app.py
-   ports:
-       - "3001:80"
-       - "27017:27017"
-   volumes:
-       - .:/minerva
-   links:
-       - db 
+version: '2'
+services:
+    web:
+       build: .
+       command: python -u app.py
+       volumes:
+           - .:/minerva
+       network_mode: "host"
