--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,8 @@
-web:
-    build: .
-    command: python -u app.py
-    ports:
-        - "3001:80"
-    volumes:
-        - .:/minerva
-    links:
-        - db
-db:
-    image: mongo:3.2
+version: '2'
+services:
+    web:
+        build: .
+        command: python -u app.py
+        volumes:
+            - .:/minerva
+        network_mode: 'host'
