Correção de um erro na hora de adicionar/editar/modificar membros de projeto
O retorno em AJAX era com a versão sem a alteração, por não testar direito eu achei que só tava precisando dar dois clicks que funcionava, mas a real era que isso tava causando duplicata de dados

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ tcl
 # PosGraduacao
 
 *settings/files/api_keys.json
+*settings/files/api_keys_old.json
 
 #######################################################
 #Upload files
