--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,42 @@
 appdirs==1.4.3
-astroid==1.5.3
-bcrypt==3.1.3
-beautifulsoup4==4.6.0
+astroid==2.4.1
+bcrypt==3.1.7
+beautifulsoup4==4.9.0
+blinker==1.4
 bs4==0.0.1
-cffi==1.11.0
-click==6.7
-Flask==0.12.4
-Flask-Login==0.4.0
+certifi==2020.4.5.1
+cffi==1.14.0
+chardet==3.0.4
+click==7.1.2
+dnspython==1.16.0
+email-validator==1.1.0
+Flask==1.1.2
+Flask-Login==0.5.0
 Flask-Mail==0.9.1
-Flask-WTF==0.14.2
-httplib2==0.10.3
-isort==4.2.15
-itsdangerous==0.24
-Jinja2==2.10.1
-lazy-object-proxy==1.3.1
-MarkupSafe==1.0
+Flask-WTF==0.14.3
+httplib2==0.17.3
+idna==2.9
+isort==4.3.21
+itsdangerous==1.1.0
+Jinja2==2.11.2
+lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
 mccabe==0.6.1
-packaging==16.8
-pep8==1.7.0
-pyasn1==0.2.3
-pyasn1-modules==0.0.8
-pycparser==2.18
-pylint==1.7.2
-pymongo==3.4.0
-pyparsing==2.2.0
-requests==2.20.0
-rsa==3.4.2
-six==1.10.0
-Werkzeug==0.12.1
-wrapt==1.10.11
-WTForms==2.1
+packaging==20.3
+pep8==1.7.1
+pip-tools==5.1.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+pylint==2.5.2
+pymongo==3.10.1
+pyparsing==2.4.7
+requests==2.23.0
+rsa==4.0
+six==1.14.0
+soupsieve==2.0
+toml==0.10.0
+urllib3==1.25.9
+Werkzeug==1.0.1
+wrapt==1.12.1
+WTForms==2.3.1
